K8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 5000
